Implement 26 recommendation for the welcome page

--- a/_includes/nuvlabox_pitch.html
+++ b/_includes/nuvlabox_pitch.html
@@ -2,13 +2,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <div>
           <div>
-            <h1>
+            <h2 class="icons-title">
               <center>
                 <span class="glyphicon glyphicon-hdd"></span>
-                <span style="color: gray">+</span>
+                <span style="color: gray; font-size: 48px;">+</span>
                 <span style="color: #CF2121" class="glyphicon glyphicon-globe" aria-hidden="true"></span>
               </center>
-            </h1>
+            </h2>
             <h2>Private cloud for SMEs</h2>
             <ul>
               <li>Affordable entry point to cloud</li>
@@ -28,13 +28,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <div>
           <div>
-            <h1>
+            <h2 class="icons-title">
               <center>
                 <span class="glyphicon glyphicon-hdd"></span>
-                <span style="color: gray">+</span>
+                <span style="color: gray; font-size: 48px;">+</span>
                 <span style="color: #CF2121" class="glyphicon glyphicon-grain" aria-hidden="true"></span>
               </center>
-            </h1>
+            </h2>
             <h2>Rapid IT for field operations</h2>
             <ul>
               <li>Simple, quick set up makes NuvlaBox ideal for IT operations in field or outpost </li>
@@ -48,13 +48,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <div>
           <div>
-            <h1>
+            <h2 class="icons-title">
               <center>
                 <span class="glyphicon glyphicon-cloud"></span>
-                <span style="color: gray">+</span>
+                <span style="color: gray; font-size: 48px;">+</span>
                 <span style="color: #CF2121" class="glyphicon glyphicon-th" aria-hidden="true"></span>
               </center>
-            </h1>
+            </h2>
             <h2>Simple IT solution for complex world</h2>
             <ul>
       <li>Plug and play set up</li>
