--- a/_includes/overview_videos.html
+++ b/_includes/overview_videos.html
@@ -1,12 +1,13 @@
 <div class="odd">
   <div id="tutorials" class="container spacy odd">
-    <h1>Tutorials</h1>
+    <h2>Tutorials</h2>
     <div class="row"></div>
+    <p/>
     <p><a href="/videos" class="btn btn-primary btn-lg" role="button">Check out our videos &raquo;</a></p>
   </div>
 
   <div id="col-template" style="display: none;">
-    <div class="col-md-6 col-sm-5 col-xs-12 container spacy">
+    <div class="col-md-6 col-sm-5 col-xs-12 container">
       <h3>Title...</h3>
       <p>
         <div class="embed-responsive embed-responsive-16by9"></div>
