--- a/_includes/slipstream_pitch.html
+++ b/_includes/slipstream_pitch.html
@@ -2,13 +2,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <div>
           <div>
-            <h1>
+            <h2 class="icons-title">
               <center>
                 <span title="Cloud" class="glyphicon glyphicon-cloud"></span>
-                <span style="color: gray">+</span>
+                <span style="color: gray; font-size: 48px;">+</span>
                 <span title="Automation" style="color: #CF2121" class="glyphicon glyphicon-flash"></span>
               </center>
-            </h1>
+            </h2>
             <h2>Platform as a Service (PaaS)</h2>
             <ul>
               <li>Take full advantage of the cloud, avoiding cloud provider and technology lock-in</li>
@@ -28,13 +28,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <div>
           <div>
-            <h1>
+            <h2 class="icons-title">
               <center>
                 <span title="Cloud" class="glyphicon glyphicon-cloud"></span>
-                <span style="color: gray">+</span>
+                <span style="color: gray; font-size: 48px;">+</span>
                 <span title="Cool" style="color: #CF2121" class="glyphicon glyphicon-sunglasses"></span>
               </center>
-            </h1>
+            </h2>
             <h2>DevOps platform</h2>
             <ul>
               <li>Increase the velocity and quality of your development and deployment</li>
@@ -54,13 +54,13 @@
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <div>
           <div>
-            <h1>
+            <h2 class="icons-title">
               <center>
                 <span title="Cloud" class="glyphicon glyphicon-cloud"></span>
-                <span style="color: gray">+</span>
+                <span style="color: gray; font-size: 48px;">+</span>
                 <span title="Oh another cloud" style="color: #CF2121" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
               </center>
-            </h1>
+            </h2>
             <h2>Hybrid cloud manager</h2>
             <ul>
               <li>Eliminate shadow-IT and reclaim infrastructure control</li>
