--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -77,6 +77,11 @@ img {
   padding-bottom: 0px;
 }
 
+.row-summary h2 {
+    margin-top: 10px;
+    margin-bottom: 6px;
+}
+
 .slipstream-main-story {
   background: #eee url(/img/content/slipstream_schema_color_on_transparent_25opacity_2500px.png) no-repeat center center;
 }
@@ -290,28 +295,28 @@ div.nuvlabox.odd {
   background: white;
   margin: 15px 0;
   padding: 1px 10px 15px 10px;
-  border: 4px solid white;
+  border: 1px solid white;
 }
 
 .row-summary > div > div {
   background: white;
   margin: 15px 0;
   padding: 1px 10px 15px 10px;
-  border: 4px solid white;
+  border: 1px solid white;
 }
 
 .row-summary > div > div:hover,
 .row-highlights:hover {
   background: #E6E6E6;
-  border: 4px solid #800000;
+  border: 1px solid #800000;
 }
 
 .cloud > div > div {
-  border: 4px solid white;
+  border: 1px solid white;
 }
 
 .cloud > div > div:hover {
-  border: 4px solid #800000;
+  border: 1px solid #800000;
 }
 
 .cloud img {
@@ -319,30 +324,81 @@ div.nuvlabox.odd {
 }
 
 .row-summary-sixsq img {
+  margin-top: 10px;
   max-width: 200px;
   max-height: 60px;
 }
 
-.row-summary-sixsq center {
-  height: 60px;
+.row-summary-slipstream .icons-title, .row-summary-nuvlabox .icons-title {
+  font-size: 63px;
 }
 
 .banner-message {
   margin-top: 10px;
+  margin-bottom: 10px;
   padding-top: 0px;
 }
 
 @media (min-width:1200px) { 
-  .row-summary-sixsq .col-md-4 > div > div {
+  .coming-next .row-summary .col-md-6 > div {
     height: 260px;
     /*background: blue;*/
   }
 }
 
 @media (max-width:1200px) { 
+  .coming-next .row-summary .col-md-6 > div {
+    height: 280px;
+    /*background: black;*/
+  }
+}
+
+@media (max-width:992px) { 
+  .coming-next .row-summary .col-md-6 > div {
+    height: auto;
+    /*background: yellow;*/
+  }
+}
+
+@media (min-width:1200px) { 
+  .quotes .row-summary .col-md-6 > div {
+    height: 260px;
+    /*background: blue;*/
+  }
+}
+
+@media (max-width:1200px) { 
+  .quotes .row-summary .col-md-6 > div {
+    height: 280px;
+    /*background: black;*/
+  }
+}
+
+@media (max-width:992px) { 
+  .quotes .row-summary .col-md-6 > div {
+    height: auto;
+    /*background: yellow;*/
+  }
+}
+
+@media (max-width:768px) { 
+  .row-summary-sixsq .col-md-6 > div > div {
+    height: auto;
+    /*background: yellow;*/
+  }
+}
+
+@media (min-width:1200px) { 
   .row-summary-sixsq .col-md-4 > div > div {
-    height: 180px;
-    /*background: white;*/
+    height: 240px;
+    /*background: blue;*/
+  }
+}
+
+@media (max-width:1200px) { 
+  .row-summary-sixsq .col-md-4 > div > div {
+    height: 320px;
+    /*background: gray;*/
   }
 }
 
