--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,6 +57,9 @@
             <a href="https://plus.google.com/115601684384239978812/posts" rel="publisher">
                 <div id="footer_logo_googleplus">&nbsp;</div>
             </a>
+            <a href="https://www.facebook.com/SixSq-143266939349560" rel="publisher">
+                <div id="footer_logo_facebook">&nbsp;</div>
+            </a>
             <div class="copyright">Copyright © 2015 SixSq Sàrl. All rights reserved.</div>
             <div class="copyright">SixSq, SlipStream and NuvlaBox are trademarks of SixSq Sàrl in Switzerland and other countries.</div>
           </div>
