Implemented Alex's feedbck

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -39,12 +39,12 @@
             <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
               <center>
                 <a href="/contact/#contact-us-form" class="btn btn-primary btn-lg banner-message">
-                  <h3>
-                  Questions?
-                  </h3>
                   <h4>
-                  Contact Us!
+                  Questions?
                   </h4>
+                  <h5>
+                  Contact Us!
+                  </h5>
                 </a>
               </center>
             </div>
@@ -109,9 +109,9 @@
                     </h2>
                   </center>
                   <ul>
-                    <li>Online multi-cloud application deployment</li>
-                    <li>Easy access to wide range of cloud providers</li>
-                    <li>Single dashboard for simplified cost control</li>
+                    <li>Multi-cloud application deployment</li>
+                    <li>Easy access to wide range of clouds</li>
+                    <li>Dashboard for simplified cost control</li>
                     <li>Friction-less application deployment</li>
                     <li>Powered by SlipStream</li>
                   </ul>
@@ -180,10 +180,17 @@
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div>
-              <h2>Latest blogs</h2>
               <div>
-                <h3>Tackling Cloud Jargon</h3>
-                <p>by Charles Loomis</p>
+                <div class="row row-summary">
+                  <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                    <h2>Latest blogs</h2>
+                    <h3>Tackling Cloud Jargon</h3>
+                    <p>by Charles Loomis</p>
+                  </div>
+                  <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <img style="margin-top: 20px; max-width: 100px;" src="/img/content/blogs/Cloud_computing_concept.jpg" alt="blog"/>
+                  </div>
+                </div>
                 <p>
                 This blog provides a quick overview of cloud jargon, useful to better understand, compare and navigate the world of clouds.
                 </p>
