--- a/_includes/training.html
+++ b/_includes/training.html
@@ -1,4 +1,4 @@
-<div>
-    <p>Sign Up for our next SlipStream Training Event in Geneva, Switzerland on 8 and 9 February 2016!  <a href="http://www.eventbrite.com/e/discover-smart-cloud-solutions-hands-on-slipstream-training-tickets-19557979443?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=19557979443" alt="Eventbrite - Discover Smart Cloud Solutions: Hands On SlipStream Training" /></a>
+<!--<div>
+    <p>Sign Up for our next SlipStream Training Event in Geneva, Switzerland on 7 and 8 June 2016!  <a href="http://www.eventbrite.com/e/discover-smart-cloud-solutions-hands-on-slipstream-training-tickets-19557979443?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=19557979443" alt="Eventbrite - Discover Smart Cloud Solutions: Hands On SlipStream Training" /></a>
     </p>
-</div>
+</div>-->
