--- a/_layouts/article_nuvla_overview.html
+++ b/_layouts/article_nuvla_overview.html
@@ -10,27 +10,76 @@
 
           <div class="container big spacy">
             <h2>What do you get?</h2>
+
+
             <div class="row row-highlights">
-                <div class="col-md-6 col-2-image">
+              <div class="col-md-4 col-2-image">
+                <h2>
+                    <center>
+                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                    </center>
+                </h2>
+              </div>
+              <div class="col-md-8 col-2-text">
+                <div>
+                  <h2>Cloud Brokerage</h2>
+                  <p>All the clouds to choose from, with:</p>
+                  <ul>
+                    <li>1 contract</li>
+                    <li>1 bill</li>
+                    <li>1 dashboard</li>
+                    <li>1 trusted advisor</li>
+                  </ul>
+                  <p>The choice is yours. The responsibility is ours!</p>
+                  <p>We will do our very best to match your requirements, and deliver at an affordable price.</p>
+                  <center><a class="btn btn-primary btn-lg" role="button" href="/contact/#contact-us-form">Get in touch &raquo;</a></center>
+                </div>
+              </div>
+            </div>
+            <div class="row row-highlights">
+                <div class="col-md-8 col-2-text">
+                  <div>
+                    <h2>Application Deployment Automation</h2>
+                    <ul>
+                      <li>No lock-in</li>
+                      <li>Cost control</li>
+                      <li>Hybrid cloud strategy</li>
+                      <li>Self-service IT</li>
+                      <li>Clear guidance</li>
+                    </ul>
+                    <p>We take away cloud complexity, so you can focus on your business.</p>
+                    <center><a class="btn btn-primary btn-lg" role="button" href="/contact/#contact-us-form">Contact us &raquo;</a></center>
+                  </div>
+                </div>
+                <div class="col-md-4 col-2-image">
+                  <h2>
+                      <center>
+                          <span class="glyphicon glyphicon-ok-circle"></span>
+                      </center>
+                  </h2>
+                </div>
+            </div>
+            <div class="row row-highlights">
+                <div class="col-md-4 col-2-image">
                     <h2>
                         <center>
                             <span class="glyphicon glyphicon-flash"></span>
                         </center>
                     </h2>
                 </div>
-                <div class="col-md-6 col-2-text">
+                <div class="col-md-8 col-2-text">
                     <h2>Automation as a Service</h2>
                     <p>Repetitive, manual deployments are costing your organisation money. Introducing automation will reduce expenditure and give your people more time to create greater things. Nuvla even takes away the burden to run your own service.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a></center>
                 </div>
             </div>
             <div class="row row-highlights">
-                <div class="col-md-6 col-2-text">
+                <div class="col-md-8 col-2-text">
                     <h2>Cloud Neutrality as a Service</h2>
                     <p>Nuvla communicates with all connected IaaS cloud services via a connector architecture. This means we're already talking to many clouds you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, Nuvla takes the stress out of making the wrong decision. Nuvla’s cloud neutrality means it isolates users from vendor lock-in, providing unprecedented flexibility in your choice of cloud solutions. All this as a service.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a></center>
                 </div>
-                <div class="col-md-6 col-2-image vertical-align">
+                <div class="col-md-4 col-2-image vertical-align">
                     <h2>
                         <center>
                             <span class="glyphicon glyphicon-leaf"></span>
@@ -39,26 +88,26 @@
                 </div>
             </div>
             <div class="row row-highlights">
-                <div class="col-md-6 col-2-image">
+                <div class="col-md-4 col-2-image">
                     <h2>
                         <center>
                             <span class="glyphicon glyphicon-fullscreen"></span>
                         </center>
                     </h2>
                 </div>
-                <div class="col-md-6 col-2-text">
+                <div class="col-md-8 col-2-text">
                     <h2>Scalability as a Service</h2>
                     <p>If your private cloud is not giving you all you need, but you don't want to invest in more infrastructure, you can use Nuvla to scale out to a public cloud and get the best of both worlds.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a></center>
                 </div>
             </div>
             <div class="row row-highlights">
-                <div class="col-md-6 col-2-text">
+                <div class="col-md-8 col-2-text">
                     <h2>An Extensible Framework as a Service</h2>
                     <p>Take advantage of existing templates, such as load balancers, database clusters, Hadoop systems and more. But don't stop there, you can extend these and create your own. You can also take advantage of configuration management systems, such as Puppet, Chef and Ansible. What about Docker? It's also batteries included, with support for Docker and Docker Swarms. And again, all this from the comfort of a managed service.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a></center>
                 </div>
-                <div class="col-md-6 col-2-image vertical-align">
+                <div class="col-md-4 col-2-image vertical-align">
                     <h2>
                         <center>
                             <span class="glyphicon glyphicon-resize-full"></span>
@@ -67,14 +116,14 @@
                 </div>
             </div>
             <div class="row row-highlights">
-                <div class="col-md-6 col-2-image">
+                <div class="col-md-4 col-2-image">
                     <h2>
                         <center>
                             <img src="/img/design/slipstream_logo_red_on_transparent_256px.png"/>
                         </center>
                     </h2>
                 </div>
-                <div class="col-md-6 col-2-text">
+                <div class="col-md-8 col-2-text">
                     <h2>SlipStream as a Service</h2>
                     <p>Managed by SixSq and hosted in Europe, Nuvla is the open PaaS based on SlipStream providing unprecedented application deployment automation delivered as an on-line service. And who is better placed than the creators of SlipStream to offer it as a service? And we do it with care, dedication and attention to details.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a></center>
@@ -85,12 +134,12 @@
         <div class="container big spacy">
           <h2 id="who-is-SlipStream-for">Who is it for?</h2>
           <div id="newbies" class="row row-highlights">
-              <div class="col-md-6 col-2-text">
+              <div class="col-md-8 col-2-text">
                   <h2>Cloud Newbies</h2>
                   <p>If you are considering cloud but don't want to make that big, and possibly expensive, decision of signing up with one cloud provider, Nuvla gives you access to many of the mainstream IaaS providers without being stuck with vendor lock-in.</p>
                   <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a></center>
               </div>
-              <div class="col-md-6 col-2-image">
+              <div class="col-md-4 col-2-image">
                 <h2>
                   <center>
                     <span class="glyphicon glyphicon-play"></span>
@@ -99,14 +148,14 @@
               </div>
           </div>
           <div id="newbies" class="row row-highlights">
-              <div class="col-md-6 col-2-image">
+              <div class="col-md-4 col-2-image">
                 <h2>
                   <center>
                     <span class="glyphicon glyphicon-road"></span>
                   </center>
                 </h2>
               </div>
-              <div class="col-md-6 col-2-text">
+              <div class="col-md-8 col-2-text">
                   <h2>Organisations Wanting Easier Access to Public Clouds</h2>
                   <p>Comfortable with using public clouds? Want to avoid lock-in yet benefit from amazing application
                   deployment automation? You will love Nuvla.</p>
@@ -121,14 +170,14 @@
           <div class="container big spacy">
             <h2 id="how-to-use-SlipStream">How do you use it?</h2>
             <div class="row row-highlights">
-                <div class="col-md-6 col-2-image">
+                <div class="col-md-4 col-2-image">
                     <h2>
                         <center>
                             <span class="glyphicon glyphicon-play"></span>
                         </center>
                     </h2>
                 </div>
-                <div class="col-md-6 col-2-text">
+                <div class="col-md-8 col-2-text">
 		            <h2>Sign up for free!</h2>
 		            <p>Nuvla is free. You only pay for the cloud services you consume. This is a good option if your organisation is happy with the idea of public cloud. Or if you just want to test it out. Signing up takes just a couple of minutes and the user interface is a pleasure. Go ahead, give it a try!</p>
                     <center>
