--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -54,7 +54,7 @@
     
   	<div class="jumbotron">
       <div class="container">
-          <h2>What are you looking for?</h2>
+          <h2>Our products and services</h2>
           <div class="row row-summary row-summary-sixsq">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
               <div>
@@ -126,6 +126,134 @@
       </div>
     </div>
     
+  	<div class="jumbotron">
+      <div class="container">
+          <h2>Smart Cloud Brokerage on Nuvla</h2>
+          <div class="row row-highlights row-summary-sixsq">
+              <div class="col-md-4 col-2-image">
+                <h3>
+                  <center>
+                      <span class="glyphicon glyphicon-thumbs-up"></span>
+                  </center>
+                </h3>
+              </div>
+              <div class="col-md-8 col-2-text">
+                <div>
+                  <h2>All the clouds to choose from, with</h2>
+                  <ul>
+                    <li>1 contract</li>
+                    <li>1 bill</li>
+                    <li>1 dashboard</li>
+                    <li>1 trusted advisor</li>
+                  </ul>
+                  <p>The choice is yours. The responsibility is ours!</p>
+                  <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Learn more &raquo;</a></center>
+                </div>
+              </div>
+          </div>
+          <div class="row row-highlights row-summary-sixsq">
+              <div class="col-md-8 col-2-text">
+                <div>
+                  <h2>Application Deployment Automation</h2>
+                  <ul>
+                    <li>No lock-in</li>
+                    <li>Cost control</li>
+                    <li>Hybrid cloud strategy</li>
+                    <li>Self-service IT</li>
+                    <li>Clear guidance</li>
+                  </ul>
+                  <p>We take away cloud complexity, so you can focus on your business.</p>
+                  <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Learn more &raquo;</a></center>
+                </div>
+              </div>
+              <div class="col-md-4 col-2-image">
+                <h3>
+                    <center>
+                        <span class="glyphicon glyphicon-ok-circle"></span>
+                    </center>
+                </h3>
+              </div>
+          </div>
+      </div>
+    </div>
+
+<!--
+
+
+<div class="jumbotron">
+  <div class="container">
+      <h2>Our solutions</h2>
+      <div class="row row-summary row-summary-sixsq">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div>
+            <div>
+              <center>
+                <h2>
+                    Smart City Sensor Aggregation
+                </h2>
+              </center>
+              <ul>
+                <li>Increase cyber security</li>
+                <li>Reduce network usage</li>
+                <li>Remote control your infrastructure</li>
+                <strong><li>Massive maintenance and operation savings!</li></strong>
+              </ul>
+            </div>
+            <center>
+              <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream">Learn more &raquo;</a>
+            </center>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div>
+            <div>
+              <center>
+                <h2>
+                  Smart Cloud Brokerage 
+                </h2>
+              </center>
+              <ul>
+                <li>1 Dashboard</li>
+                <li>1 Contract</li>
+                <li>1 Bill</li>
+                <strong><li>All the clouds you want, at scale!</li></strong>
+              </ul>
+            </div>
+            <center>
+                <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Discover &raquo;</a>
+            </center>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <div>
+            <div>
+              <center>
+                <h2>
+                  Smart Hybrid Cloud Solution 
+                </h2>
+              </center>
+              <ul>
+                <li>Bring together private and public clouds</li>
+                <li>Move apps seamlessly between clouds</li>
+                <li>Unique user experience</li>
+                <strong><li>Offer choice, hide complexity!</li></strong>
+              </ul>
+            </div>
+            <center>
+                <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Read it &raquo;</a>
+            </center>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+-->
+
+
     <div class="jumbotron quotes">
       <div class="container">
         <h2>What people say about us?</h2>
@@ -135,7 +263,7 @@
               <center>
                 <img src="/img/content/451-research-logo.png" alt="451 Research"/>
                 <h3>
-                  "SixSq delivers the type of fluid and secure solutions for application deployment automation that are critical to successful businesses."
+                  "SixSq delivers the type of fluid and secure cloud solutions for application deployment automation that are critical to successful businesses."
                 </h3>
                 <h4>
                   William Fellows, Analyst, Research Vice President and Co-founder, 451 Research
@@ -170,10 +298,10 @@
               <div>
                 <h3>SlipStream Training</h3>
                 <div>
-                    <p>Sign Up for our next SlipStream Training Event in Geneva, Switzerland on 8 and 9 February 2016!</p>
-                    <center>
+                    <p>Reserve the date in your calendar for our next SlipStream Training Event in Geneva, Switzerland on 7 and 8 June 2016!</p><p>Registration is opening soon.</p>
+                    <!--<center>
                       <a href="http://www.eventbrite.com/e/discover-smart-cloud-solutions-hands-on-slipstream-training-tickets-19557979443?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=19557979443" alt="Eventbrite - Discover Smart Cloud Solutions: Hands On SlipStream Training" /></a>
-                    </center>
+                    </center>-->
                 </div>
               </div>
             </div>
