--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -575,6 +575,10 @@ div.nuvlabox.odd {
   font-size: 3.3em;
 }
 
+.col-2-image h3 {
+  font-size: 2.5em;
+}
+
 /* Multi-column dropdown menu */
 .dropdown-menu {
 	min-width: 100px;
