--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -299,9 +299,9 @@
                 <h3>SlipStream Training</h3>
                 <div>
                     <p>Reserve the date in your calendar for our next SlipStream Training Event in Geneva, Switzerland on 7 and 8 June 2016!</p><p>Registration is opening soon.</p>
-                    <!--<center>
-                      <a href="http://www.eventbrite.com/e/discover-smart-cloud-solutions-hands-on-slipstream-training-tickets-19557979443?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=19557979443" alt="Eventbrite - Discover Smart Cloud Solutions: Hands On SlipStream Training" /></a>
-                    </center>-->
+                    <center>
+                        <a href="http://www.eventbrite.com/e/discover-smart-cloud-solutions-hands-on-slipstream-training-tickets-21599097482?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=21599097482" alt="Eventbrite - Discover Smart Cloud Solutions: Hands On SlipStream Training" /></a>
+                    </center>
                 </div>
               </div>
             </div>
