Add explicit markdownify

--- a/_layouts/usecases_index.html
+++ b/_layouts/usecases_index.html
@@ -60,7 +60,7 @@
           
         {% else %}
           <div>
-            {{ post.content }}
+            {{ post.content | markdownify }}
           </div>
         {% endif %}
         <center>
