--- a/_includes/right_full.html
+++ b/_includes/right_full.html
@@ -3,7 +3,7 @@
     <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
   {% endif %}
   <h2>{{ post.title }}</h2>
-  <p>{{ post.content }}</p>
+  <p>{{ post.content | markdownify }}</p>
   {% if post.author %}
     <p/>
     <div class="author">By: {{ post.author }}</div>
