Add support for LinkedIn share

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -18,6 +18,8 @@
               data-via="sixsq">
               Tweet
             </a>
+            <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+            <script type="IN/Share" data-url={{ page.url | prepend:site.url }}" data-counter="right"></script>
           </div>
           <div class="col-md-4">
             {% if page.image %}
