--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,6 +59,13 @@
   {% endif %}
 {% endif %}
 
+<!-- Open Graph metadata for social networks -->
+<meta property="og:title" content="{{ page.title }}" />
+<meta property="og:description" content="{{ page.summary }}" />
+<meta property="og:url" content="{{ page.url | prepend:site.url }}" />
+<meta property="og:image" content="{{ page.image | prepend:site.url }}" />
+
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
