--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,6 +2,17 @@
 <html prefix="og: http://ogp.me/ns#">
   {% include head.html %}
   <body>
+
+    <!-- Facebook SDK -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.5";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
     {% include top.html %}
     {% if page.category == "r-and-d" %}
       {% include r-and-d.html %}
@@ -11,15 +22,20 @@
     <div class="jumbotron">
       <div class="container">
         <div class="row">
+          <!-- Social network shares -->
           <div class="col-md-8">
             <h1 class="list_title">{{ page.title }}</h1>
+            <!-- Twitter -->
             <a class="twitter-share-button"
               href="https://twitter.com/share"
               data-via="sixsq">
               Tweet
             </a>
+            <!-- LinkedIn -->
             <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
             <script type="IN/Share" data-url={{ page.url | prepend:site.url }}" data-counter="right"></script>
+            <!-- Facebook -->
+            <div class="fb-share-button" data-href="{{ page.url | prepend:site.url }}" data-layout="button_count"></div>
           </div>
           <div class="col-md-4">
             {% if page.image %}
