Bring back og desc

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -61,7 +61,7 @@
 
 <!-- Open Graph metadata for social networks -->
 <meta property="og:title" content="{{ page.title }}" />
-<!--<meta property="og:description" content="{{ page.summary }}" />-->
+<meta property="og:description" content="{{ page.summary }}" />
 <meta property="og:url" content="{{ page.url | prepend:site.url }}" />
 <meta property="og:image" content="{{ page.image | prepend:site.url }}" />
 
