--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,6 +64,7 @@
 <meta property="og:description" content="{{ page.summary }}" />
 <meta property="og:url" content="{{ page.url | prepend:site.url }}" />
 <meta property="og:image" content="{{ page.image | prepend:site.url }}" />
+<meta property="og:image:url" content="{{ page.image | prepend:site.url }}" />
 
 
 <script>
