Update latest and blog

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -296,12 +296,12 @@
             <div>
               <div>
                 <div class="row row-summary">
-                  <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
                     <h3>Cloud Expo Europe</h3>
                   </div>
-                  <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                    <img style="margin-top: 5px; max-width: 150px;" src="/img/content/blogs/logo_cee.png" alt="blog"/>
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/blogs/logo_cee.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
@@ -319,7 +319,7 @@
                     <h2>Latest blogs</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <img style="margin-top: 5px; max-width: 200px;" src="/img/content/blogs/logo_cyclone.png" alt="blog"/>
+                    <center><img style="margin-top: 5px; max-width: 200px;" src="/img/content/blogs/logo_cyclone.png" alt="blog"/></center>
                   </div>
                 </div>
                 <h3>Towards Automated Cloud Application Placement</h3>
