News items on NuvlaBox Mini and SlipStream v3 release

--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -12,7 +12,7 @@
         </div>
 
         <p align="center">
-          <img style="max-width: 80%" src="/img/content/nuvlabox/photos/nb_front.png" alt="NuvlaBox photo" />
+          <img style="max-width: 80%" src="/img/content/nuvlabox/NuvlaBox-Custom-ML600-v1-angled.jpeg" alt="NuvlaBox photo" />
         </p>
 
         <div class="container big spacy">
