Update Nuvla logo on welcome and product pages & refresh text

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -62,7 +62,7 @@
                   <center>
                     <img src="/img/design/slipstream_logo_red_on_transparent_256px.png" alt="SlipStream">
                     <h2>
-                        Our Cloud App Deployment Software Solution
+                        Cloud App Deployment Software Solution
                     </h2>
                   </center>
                   <ul>
@@ -84,7 +84,7 @@
                   <center>
                     <img src="/img/design/nuvlabox_logo_red_on_transparent_256px.png" alt="NuvlaBox">
                     <h2>
-                      Our Smart Cloud-in-a-box Appliance 
+                      Smart Cloud-in-a-box Appliance 
                     </h2>
                   </center>
                   <ul>
@@ -103,17 +103,17 @@
               <div>
                 <div>
                   <center>
-                    <img style="max-height: 40px;" src="/img/design/nuvla_logo_red_on_transparent_256px.png" alt="Nuvla">
+                    <img style="max-height: 40px;" src="/img/content/nuvla/nuvla_logo_red_on_transparent_512px.png" alt="Nuvla">
                     <h2>
-                      Our Free Application Deployment Platform 
+                      Smart Cloud Brokerage
                     </h2>
                   </center>
                   <ul>
-                    <li>Multi-cloud application deployment</li>
-                    <li>Easy access to wide range of clouds</li>
-                    <li>Dashboard for simplified cost control</li>
-                    <li>Friction-less application deployment</li>
-                    <li>Powered by SlipStream</li>
+                    <li>All Clouds to choose from</li>
+                    <li>No lock-in</li>
+                    <li>Cost control</li>
+                    <li>Self-service IT</li>
+                    <li>Clear governance</li>
                   </ul>
                 </div>
                 <center>
