Updates for NB v2 and PR

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -27,7 +27,7 @@
             	  {% if page.subtitle %}
             	    {{ page.subtitle }}
             	  {% else %}
-            	    SixSq: Smart Cloud Automation Solutions
+            	    SixSq: Cloud Neutral Solutions
                 {% endif %}
               	</h1>
                 {% if page.summary %}
@@ -57,26 +57,27 @@
           <h2>Our products and services</h2>
           <div class="row row-summary row-summary-sixsq">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-              <div>
                 <div>
+                  <div>
+                    <center>
+                      <img style="max-height: 40px;" src="/img/content/nuvla/nuvla_logo_red_on_transparent_512px.png" alt="Nuvla">
+                      <h2>
+                        Smart Cloud Brokerage
+                      </h2>
+                    </center>
+                    <ul>
+
+                      <li>All Clouds to choose from</li>
+                      <li>No lock-in</li>
+                      <li>Cost control</li>
+                      <li>Self-service IT</li>
+                      <li>Clear governance</li>
+                    </ul>
+                  </div>
                   <center>
-                    <img src="/img/design/slipstream_logo_red_on_transparent_256px.png" alt="SlipStream">
-                    <h2>
-                        Cloud App Deployment Software Solution
-                    </h2>
+                      <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Read it &raquo;</a>
                   </center>
-                  <ul>
-                    <li>Supports New and Legacy applications</li>
-                    <li>All clouds included</li>
-                    <li>Great open source DevOps platform</li>
-                    <li>Simple Multi Cloud solution</li>
-                    <li>Build your own powerful PaaS</li>
-                  </ul>
                 </div>
-                <center>
-                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream">Learn more &raquo;</a>
-                </center>
-              </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
               <div>
@@ -88,10 +89,10 @@
                     </h2>
                   </center>
                   <ul>
-                    <li>Private and Secure Cloud for SMEs</li>
-                    <li>Rapid deployment for field operations</li>
-                    <li>Zero config making IT child's play</li>
-                    <li>Perfect private cloud companion for hybrid solution</li>
+                    <li>Simple IT solution</li>
+                    <li>Private and secure cloud</li>
+                    <li>Plug and play</li>
+                    <li>Remote management and application update</li>
                   </ul>
                 </div>
                 <center>
@@ -103,21 +104,21 @@
               <div>
                 <div>
                   <center>
-                    <img style="max-height: 40px;" src="/img/content/nuvla/nuvla_logo_red_on_transparent_512px.png" alt="Nuvla">
+                    <img src="/img/design/slipstream_logo_red_on_transparent_256px.png" alt="SlipStream">
                     <h2>
-                      Smart Cloud Brokerage
+                        Smart Cloud Application Management
                     </h2>
                   </center>
                   <ul>
-                    <li>All Clouds to choose from</li>
-                    <li>No lock-in</li>
-                    <li>Cost control</li>
-                    <li>Self-service IT</li>
-                    <li>Clear governance</li>
+                    <li>Any application in any cloud</li>
+                    <li>1-click application deployment</li>
+                    <li>Supports DevOps, Big Data and Smart City strategies</li>
+                    <li>Cost savings via automation</li>
+                    
                   </ul>
                 </div>
                 <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Read it &raquo;</a>
+                  <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream">Learn more &raquo;</a>
                 </center>
               </div>
             </div>
@@ -128,51 +129,25 @@
     
   	<div class="jumbotron">
       <div class="container">
-          <h2>Smart Cloud Brokerage on Nuvla</h2>
-          <div class="row row-highlights row-summary-sixsq">
-              <div class="col-md-4 col-2-image">
-                <h3>
-                  <center>
-                      <span class="glyphicon glyphicon-thumbs-up"></span>
-                  </center>
-                </h3>
-              </div>
-              <div class="col-md-8 col-2-text">
-                <div>
-                  <h2>All the clouds to choose from, with</h2>
-                  <ul>
-                    <li>1 contract</li>
-                    <li>1 bill</li>
-                    <li>1 dashboard</li>
-                    <li>1 trusted advisor</li>
-                  </ul>
-                  <p>The choice is yours. The responsibility is ours!</p>
-                  <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Learn more &raquo;</a></center>
-                </div>
-              </div>
-          </div>
-          <div class="row row-highlights row-summary-sixsq">
-              <div class="col-md-8 col-2-text">
-                <div>
-                  <h2>Application Deployment Automation</h2>
-                  <ul>
-                    <li>No lock-in</li>
-                    <li>Cost control</li>
-                    <li>Hybrid cloud strategy</li>
-                    <li>Self-service IT</li>
-                    <li>Clear guidance</li>
-                  </ul>
-                  <p>We take away cloud complexity, so you can focus on your business.</p>
-                  <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Learn more &raquo;</a></center>
-                </div>
-              </div>
-              <div class="col-md-4 col-2-image">
-                <h3>
+          <h2>Smart Cloud-in-a-box Appliance</h2>
+          <div style="background-color: white; padding: 20px">
+              <div class="row row-summary">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center>
-                        <span class="glyphicon glyphicon-ok-circle"></span>
+                        <h3>NuvlaBox v2</h3>
+                        <img style="max-width: 300px;" src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
                     </center>
-                </h3>
+                  </div>
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <center>
+                        <h3>NuvlaBox Mini</h3>
+                        <img style="max-width: 300px;" src="/img/content/nuvlabox/nuvlabox-mini.png" alt="NuvlaBox mini photo" />
+                    </center>
+                  </div>
               </div>
+              <center>
+                  <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Discover &raquo;</a>
+              </center>
           </div>
       </div>
     </div>
