Experiment with responsive img

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -135,7 +135,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center>
                         <h3>NuvlaBox v2</h3>
-                        <img style="max-width: 300px;" src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
+                        <img class="img-responsive" style="max-width: 300px;" src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
                     </center>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
