--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -16,13 +16,13 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                   <center>
                       <h3>NuvlaBox v2</h3>
-                      <img style="max-width: 300px;" src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
+                      <img src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
                   </center>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                   <center>
                       <h3>NuvlaBox Mini</h3>
-                      <img style="max-width: 300px;" src="/img/content/nuvlabox/nuvlabox-mini.png" alt="NuvlaBox mini photo" />
+                      <img src="/img/content/nuvlabox/nuvlabox-mini.png" alt="NuvlaBox mini photo" />
                   </center>
                 </div>
             </div>
