--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -131,17 +131,17 @@
       <div class="container">
           <h2>Smart Cloud-in-a-box Appliance</h2>
           <div style="background-color: white; padding: 20px">
-              <div class="row row-summary">
+              <div style="padding-bottom: 20px;" class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center>
                         <h3>NuvlaBox v2</h3>
-                        <img class="img-responsive" style="max-width: 300px;" src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
+                        <img class="img-responsive" src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
                     </center>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center>
                         <h3>NuvlaBox Mini</h3>
-                        <img style="max-width: 300px;" src="/img/content/nuvlabox/nuvlabox-mini.png" alt="NuvlaBox mini photo" />
+                        <img src="/img/content/nuvlabox/nuvlabox-mini.png" alt="NuvlaBox mini photo" />
                     </center>
                   </div>
               </div>
