Small changes to terminology on product pages

--- a/_includes/nuvla_intro.html
+++ b/_includes/nuvla_intro.html
@@ -10,7 +10,7 @@
 	  {% if page.subtitle %}
 	    {{ page.subtitle }}
 	  {% else %}
-	    Application Deployment Platform
+	    Smart Cloud Brokerage
     {% endif %}
   	</h1>
     {% if page.subtitle %}
