Add product description page

--- a/_includes/media_nav.html
+++ b/_includes/media_nav.html
@@ -13,6 +13,7 @@
         <li id="sub_news"><a href="/news">News</a></li>
         <li id="sub_videos"><a href="/videos">Videos</a></li>
         <li id="sub_eguide"><a href="/eguides">eGuides</a></li>
+        <li id="sub_product_descriptions"><a href="/product_descriptions">Product Descriptions</a></li>
       </ul>
     </div>
   </div>
