--- a/_includes/top.html
+++ b/_includes/top.html
@@ -40,13 +40,16 @@
 		            <div class="col-sm-6">
 			            <ul class="multi-column-dropdown">
                     <li><!--<a href="/resources/for-all/overview">--><strong>For Everyone</strong><!--</a>--></li>
-                    <li><a href="/personae">Our Users</a></li>
-                    <!-- <li><a href="/case-studies">Case Studies</a></li> -->
+                    <li><a href="/product_descriptions">Product Descriptions</a></li>
+                    <li><a href="http://media.sixsq.com/blog">Blog</a></li>
                     <li><a href="/news">News</a></li>
                     <li><a href="/videos">Videos</a></li>
                     <li><a href="/eguides">eGuides</a></li>
+                    <li><a href="/personae">Our users</a></li>
+                    <!-- <li><a href="/case-studies">Case Studies</a></li> -->
+                    
                     <li><a href="/r-and-d">R&amp;D</a></li>
-                    <li><a href="http://media.sixsq.com/blog">Blog</a></li>
+                    
 			            </ul>
 		            </div>
 		            <div class="col-sm-6">
@@ -55,7 +58,7 @@
                     <li><a href="http://ssdocs.sixsq.com/en/latest/advanced_tutorial/index.html">Tutorials</a></li>
                     <li><a href="http://ssdocs.sixsq.com/">Documentation</a></li>
                     <li><a href="http://ssapi.sixsq.com/">API</a></li>
-                    <li><a href="http://ssdocs.sixsq.com/en/latest/administrator_guide/quick_installation.html">Install</a></li>
+                    <li><a href="http://ssdocs.sixsq.com/en/latest/administrator_guide/quick_installation.html">Install SlipStream</a></li>
                     <li><a href="http://support.sixsq.com/">Support</a></li>
                     <li><a href="http://support.sixsq.com/">FAQ</a></li>
 			            </ul>
