Update What's coming next & Lates Blog on welcome page

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -273,15 +273,16 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h3>Cloud Expo Europe</h3>
+                    <h3>Smart Cloud Solution Workshop</h3>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/blogs/logo_cee.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/slipstream/dashboard.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Join us as we launch new cloud products and services in London, UK on 12 and 13 April 2016!</p><p>Don't have you ticket yet? We'll be happy to invite you.</p>
-                  <center><a class="btn btn-primary btn-lg" role="button" href="/contact/#contact-us-form">Get in touch &raquo;</a></center>
+                  <p>The next SlipStream training will take place on 7 and 8 June 2016!</p><p>If you know how to deploy apps, but want to do it better and faster, sign up for this event.
+                      </p>
+                      <center> <a href="http://www.eventbrite.com/e/discover-smart-cloud-solutions-hands-on-slipstream-training-tickets-21599097482?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=21599097482" alt="Eventbrite - Discover Smart Cloud Solutions: Hands On SlipStream Training" /></a> </p>
                 </div>
               </div>
             </div>
@@ -291,19 +292,20 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>Latest blogs</h2>
+                    <h2>Latest blog</h2>
+                     <h3>What is a Smart City?</h3>
+                        <p>by Louise Merifield</p>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 200px;" src="/img/content/blogs/logo_cyclone.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/blogs/smart_city.png" alt="blog"/></center>
                   </div>
                 </div>
-                <h3>Towards Automated Cloud Application Placement</h3>
-                <p>by Charles Loomis</p>
+                </div>
                 <p>
-                Ensure you can choose the best cloud service provider every time you deploy your application.
+                Find out why everyone is talking about Smart Cities in our latest blog.
                 </p>
                 <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/towards-automated-cloud-application-placement">Read it &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/what-is-a-smart-city">Read it &raquo;</a>
                 </center>
               </div>
             </div>
