--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -293,19 +293,19 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>Latest blog</h2>
-                     <h3>What is a Smart City?</h3>
-                        <p>by Louise Merifield</p>
+                     <h3>How to Improve Security to Amazon Web Services</h3>
+                        <p>by Lionel Schaub</p>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/blogs/smart_city.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/design/blog_entries.png" alt="blog"/></center>
                   </div>
                 </div>
                 </div>
                 <p>
-                Find out why everyone is talking about Smart Cities in our latest blog.
+                Find out to use AWS's best practises with SlipStream.
                 </p>
                 <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/what-is-a-smart-city">Read it &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/how-to-improve-security-to-amazon-web-services">Read it &raquo;</a>
                 </center>
               </div>
             </div>
