--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -273,16 +273,19 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h3>Smart Cloud Solution Workshop</h3>
+                    <h3>Earth Observation Information Day</h3>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/slipstream/dashboard.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_esa.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>The next SlipStream training will take place on 7 and 8 June 2016!</p><p>If you know how to deploy apps, but want to do it better and faster, sign up for this event.
+                  <p>Boosting Earth Observation Innovation in Europe</p><p>SixSq is contributing to the future involvement of Switzerland in ESA Earth Observation Programmes via its participation in this workshop.
                       </p>
-                      <center> <a href="http://www.eventbrite.com/e/discover-smart-cloud-solutions-hands-on-slipstream-training-tickets-21599097482?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=21599097482" alt="Eventbrite - Discover Smart Cloud Solutions: Hands On SlipStream Training" /></a> </p>
+                      <center>
+                            <a class="btn btn-primary btn-lg" role="button" href="/news">Learn more &raquo;</a>
+                        </center>
+                      <center> <a /></a> </p>
                 </div>
               </div>
             </div>
