Update tech spec page of NuvlaBox to link to product description.  Change to tag line under NB heading

--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -16,7 +16,7 @@
     {% if page.summary %}
       <p>{{ page.summary }}</p>
     {% else %}
-      <p>All the power of the cloud packaged in a simple, small and secure device.</p>
+      <p>A simple and secure private cloud solution which offers easy and affordable access to the benefits of cloud computing.</p>
     {% endif %}
   </div>
 </div>
