--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -107,7 +107,7 @@
               <div class="col-md-6 col-2-image">
                 <h2>
                   <center>
-                    <img style="max-height: 280px;" src="/img/content/eguides/MSP_eGuide_screen_shot.png" />
+                    <img style="max-height: 280px;" src="/img/content/eguides/MSP_eguide_screen_shot.png" alt="MSP_eGuide_screen_shot"/>
                   </center>
                 </h2>
               </div>
@@ -130,7 +130,7 @@
               <div class="col-md-6 col-2-image">
                 <h2>
                   <center>
-                    <img style="max-height: 280px;" src="/img/content/eguides/VAR_eGuide_screen_shot.png" />
+                    <img style="max-height: 280px;" src="/img/content/eguides/VAR_eguide_screen_shot.png"/>
                   </center>
                 </h2>
               </div>
@@ -139,7 +139,7 @@
               <div class="col-md-6 col-2-image">
                 <h2>
                   <center>
-                    <img style="max-height: 280px;" src="/img/content/eguides/IaaS_eGuide_screen_shot.png" />
+                    <img style="max-height: 280px;" src="/img/content/eguides/IaaS_eguide_screen_shot.png" />
                   </center>
                 </h2>
               </div>
